services/parts-service/k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parts-db-service
  namespace: gearup
spec:
  selector:
    app: parts-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
