services/parts-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parts-service
  namespace: gearup
spec:
  selector:
    app: parts-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
